--- a/componenti.css
+++ b/componenti.css
@@ -1,134 +1,211 @@
 *{
+    margin: 0;
+    padding: 0;
     font-family: "Quicksand", sans-serif;;
 }
 
 :root{
-  
     --dark1: #0c042c; 
     --dark2: #0c214b; 
     --light1: #c3ccd4; 
-    --neutral-gray: #b0b8c1; 
+
+    --neutral-gray: #b0b8c1;
+    --neutral-bg-color: rgba(176, 184, 193, 0.2);
+    --neutral-bg-color-contrast: rgba(124, 81, 149, 0.2); 
     
-    --contrast-color: #3a255d; 
-    --contrast-color-shadow: #3b255d2c;
-    --contrast-color2: #6a2dcc;
+    --contrast-color: #3a255d;
+    --contrast-color-shadow: #3b255d2c; 
+    --contrast-color2: #6a2dcc; 
     --positive-color: #2ac670; 
             
     --tittle1: whitesmoke; 
     --tittle2: #2ac4dd; 
+
+    --circle-color-shadow: rgba(42, 196, 221,0.15);
+    --circle-color-shadow-two: rgba(42, 196, 221,0.05)
 }
 
 
-/* :root --Style Generic Button */
-.button-style{
-    height: 80%;
-    width: 50%;
-    background-color:  var(--contrast-color-shadow);
-    border: 2px solid var(--contrast-color2);
-    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.05);
-    border-radius: 20px;
-    font-size: 18px;
-    letter-spacing: 0.5px;
-    color: var(--tittle1);
-    cursor: pointer;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
-    height: 3rem;
-    width: 16rem;
-}
-.button-style::before{
-    content: '';
-    width: 100%;
-    height: 100%;
-    top: 0;
-    position: absolute;
-    left: 0;
-    background-color: var(--contrast-color2);
-    z-index: -1;
-    transition: width 0.4s ease;
-}
-.button-style::after{
-    content: '';
-    width: 0%;
-    height: 100%;
-    top: 0;
-    position: absolute;
-    right: 0;
-    background-color: var(--dark2);
-    z-index: -1;
-    transition: width 0.4s ease;
-}
-.button-style:hover::before {
-    width: 0%; 
-}
-.button-style:hover::after {
-    width: 100%; 
-}
-.button-style:hover{
-    color: var(--tittle1); 
-    font-weight: bold
-}
-
-
-
-
-/* Actived button */
-.button-style-active{
-    height: 80%;
-    width: 50%;
-    background-color:  var(--contrast-color2);
-    border: 2px solid var(--contrast-color2);
-    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.05);
-    border-radius: 20px;
-    font-size: 18px;
-    letter-spacing: 0.5px;
-    color: var(--tittle1);
-    cursor: pointer;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
-    height: 3rem;
-}
-.button-style-active::before{
-    content: '';
-    width: 100%;
-    height: 100%;
-    top: 0;
-    position: absolute;
-    right: 0;
-    background-color: var(--dark2);
-    z-index: -1;
-    transition: width 0.4s ease;
-}
-.button-style-active:hover::before {
-    width: 0%; 
-}
-.button-style-active:hover{
-    color: var(--tittle1); 
-    font-weight: bold
-}
-
-
-
-
-/* Arrov button */
-.arrow-button{
-    font-size: 15px;
-    border: none;
+* h3{
+    font-family: "Raleway", sans-serif;
+    font-size: 35px;
+    font-weight: 400;
     color: var(--tittle2);
-    font-weight: bold;
+    text-align: center;
+    letter-spacing: 1px;
+    opacity: 0;
+}
+* h3 span{
+    color: var(--tittle2);
+}
+* p{
+    color: var(--light1);
+    letter-spacing: 1px;
+    line-height: 1.8rem;
+    font-family: "Merriweather Sans", sans-serif;
+}
+body{
+    overflow-x: hidden;
+    position: relative;
+}
+::-webkit-scrollbar{
+    width: 0px;
+}
+.marcatore{
+    color: var(--tittle2);
+    font-size: 18px;
+}
+
+
+
+
+
+
+
+/*  Section  */
+.Home{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
+}
+
+
+/* Team E Corporation */
+.img-container img{
+    width: 100%;
+    height: auto;
+}
+.img-container {
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+}
+.img-container-description{
+    z-index: 2;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 50%;
+    width: 60%;
+    transform: translate(-50%, -50%);
+    backdrop-filter: blur(1px);
+}
+.img-container-description h3{
+    text-align: left;
+    color: var(--tittle2);
+}
+.img-container-description p{
+    color: aliceblue;
+}
+.container-blog-presentation{
+    margin-top: 2rem;
+}
+.container-blog-presentation .img-container:hover .backdrop {
     background: none;
-    padding-top: 6px;
-    letter-spacing: 0.5px;
 }
-.arrow-button::after{
-    content: '➜';
-    margin-left: 0.5rem;
+
+
+
+
+
+/* Mobile Nav Bar */
+.MobileNavBar-backdrop {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--contrast-color); 
+    z-index: 999;
+    transition: left 0.3s ease-in-out;
 }
-.arrow-button:hover{
+.MobileNavBar-backdrop.active {
+    left: 0; 
+}
+.nav-bar-mobile{
+    height: 3rem;
+    width: 100%;
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 4;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: background-color 1s ease-in-out;
+    animation: fade-in 0.5s ease-in forwards;
+    
+}
+.nav-bar-mobile.active {
+    left: 0; 
+}
+.menu-container {
+    position: fixed;
+    top: 0.5rem;
+    right: 0.5rem;
+    cursor: pointer;
+    z-index: 1001;
+    display: none;
+}
+.menu-container .bar1,
+.menu-container .bar2,
+.menu-container .bar3 {
+    width: 20px;
+    height: 2px;
+    background-color: var(--light1);
+    margin: 6px 0;
+    transition: 0.4s;
+    border-radius: 8px;
+}
+.menu-container.change .bar1 {
+    transform: rotate(-45deg) translate(-4.5px, 4.5px);
+}
+.menu-container.change .bar2 {
+    opacity: 0;
+}
+.menu-container.change .bar3 {
+    transform: rotate(45deg) translate(-7px, -6px);
+}
+.nav-barMobile__logo-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    width: 40%;
+}
+.nav-barMobile__logo-container img{
+    width: 100%;
+    height: 80px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+}
+
+.linkage-containerMobile{
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 20%;
+}
+.linkage-containerMobile li{
+    list-style: none;
+}
+.linkage-containerMobile li a{
+    text-decoration: none;
     color: var(--tittle1);
 }
+.linkage-containerMobile li a:hover{
+    color: var(--contrast-color2);
+}
+
+
+
+
+
+
 
 
 
@@ -232,12 +309,141 @@
 .accedi{
     margin-left: 1rem;
     margin-top: 0.5rem;
+    margin-right: 0.5rem;
     height: 2.8rem;
     width: 10rem;
 }
 .nav-bar.scrolled{
     background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* :root --Style Generic Button */
+.button-style{
+    height: 80%;
+    width: 50%;
+    background-color:  var(--contrast-color-shadow);
+    border: 2px solid var(--contrast-color2);
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    color: var(--tittle1);
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    height: 3rem;
+    width: 15rem;
+}
+.button-style::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: absolute;
+    left: 0;
+    background-color: var(--contrast-color2);
+    z-index: -1;
+    transition: width 0.4s ease;
+}
+.button-style::after{
+    content: '';
+    width: 0%;
+    height: 100%;
+    top: 0;
+    position: absolute;
+    right: 0;
+    background-color: var(--dark2);
+    z-index: -1;
+    transition: width 0.4s ease;
+}
+.button-style:hover::before {
+    width: 0%; 
+}
+.button-style:hover::after {
+    width: 100%; 
+}
+.button-style:hover{
+    color: var(--tittle1); 
+    font-weight: bold
+}
+
+
+
+
+/* Actived button */
+.button-style-active{
+    height: 80%;
+    width: 50%;
+    background-color:  var(--contrast-color2);
+    border: 2px solid var(--contrast-color2);
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    color: var(--tittle1);
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    height: 3rem;
+}
+.button-style-active::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: absolute;
+    right: 0;
+    background-color: var(--dark2);
+    z-index: -1;
+    transition: width 0.4s ease;
+}
+.button-style-active:hover::before {
+    width: 0%; 
+}
+.button-style-active:hover{
+    color: var(--tittle1); 
+    font-weight: bold
+}
+
+
+
+
+/* Arrov button */
+.arrow-button{
+    font-size: 15px;
+    border: none;
+    color: var(--tittle2);
+    font-weight: bold;
+    background: none;
+    padding-top: 6px;
+    letter-spacing: 0.5px;
+}
+.arrow-button::after{
+    content: '➜';
+    margin-left: 0.5rem;
+}
+.arrow-button:hover{
+    color: var(--tittle1);
+}
+
+
+
+
 
 
 
@@ -364,32 +570,85 @@ footer{
 }
 
 
-.marcatore{
-    color: var(--tittle2);
-    font-size: 18px;
+
+
+/* Animation */
+.Home__subtitle-container img {
+    animation: fade-in 1s ease-in forwards;
+}
+.Home__subtitle-container h3 {
+    animation: fade-in 1s ease-in forwards;
+    animation-delay: 0.5s;
+}
+.Home__subtitle-container .button-container button {
+    animation: fade-in 1s ease-in forwards;
 }
 
-
-
-
-/* Tittle and p style */
-* h3{
-    font-family: "Raleway", sans-serif;
-    font-size: 35px;
-    font-weight: 400;
-    font-variant: var(--tittle2);
-    text-align: center;
-    letter-spacing: 1px;
-  
-}
 @keyframes fade-in {
+    from {
+        opacity: 0;
+    }
     to {
-        opacity: 1; /* Rende l'elemento visibile alla fine dell'animazione */
+        opacity: 1; 
     }
 }
-p{
-    color: var(--light1);
-    letter-spacing: 1px;
-    line-height: 1.5rem;
-    font-family: "Merriweather Sans", sans-serif;
+
+@keyframes translate {
+    from{
+        margin-top: -2rem;
+    }
+    to{
+        margin-top: 0rem;
+    }
+}
+
+@keyframes scale {
+    from {
+        transform: scale(1.1);
+        opacity: 0; /* Start hidden */
+    }
+    to {
+        transform: scale(1.0);
+        opacity: 1; /* Fully visible */
+    }
+}
+
+.scale-img {
+    transform: scale(1.1);
+    opacity: 0;
+    transition: opacity 0.5s; 
+}
+.scale-animate {
+    animation: scale 2s forwards; 
+}
+
+
+
+
+
+/* Smartphone piccoli (320px-480px) */
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    .nav-bar{
+        display: none;
+    }
+    .nav-bar-mobile{
+        display: flex;
+    }
+    .menu-container{
+        display: block;
+    }
+    .button-style,
+    .button-style-active{
+        width: 12rem;
+        height: 2rem;
+        font-size: 16px;
+    }
+    .Home{
+        overflow: hidden;
+    }
+}
+
+/* Smartphone medi (481px-768px) */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    
 }
