--- a/style.css
+++ b/style.css
@@ -49,6 +49,9 @@
     gap: 10px;
 }
 
+
+
+
 /* Home content container style */
 .Home-content-container{
     background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
@@ -166,6 +169,9 @@ video{
 .Home-Content-container-vantaggi{
     margin: -2rem auto auto auto;
     gap: 10px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
 }
 .grid-container{
     background-color: rgba(176, 184, 193, 0.2);
@@ -457,6 +463,10 @@ video{
 
 /* Smartphone piccoli (320px-480px) */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
+
+    
+
+    /* Container home presentation */
     .Home__img-container{
         flex-wrap: wrap;
     }
@@ -486,8 +496,144 @@ video{
         width: 80%;
         min-width: 100%;
     }
+    .button-container .button-style{
+        width: 12rem;
+        font-size: 14px;
+    }
+    .button-container .button-style-active{
+        width: 9rem;
+        padding: 3px;
+    }
+
+
+
+    /* Container video */
+    .contenitore-video{
+        height: 270px;
+    }
+    video{
+        width: 150%;
+    }
+    .Home-content-Intro h3{
+        font-size: 20px;
+    }
+    .Home-content-Intro h3 span{
+        font-size: 18px;
+    }
+    .Home-content-Intro p{
+        display: none;
+    }
+
+
+    /* Home container piattaforma */
+    .Home-content-container-piattaforma{
+        margin: 0rem auto;
+        flex-wrap: wrap;
+    }
+    .Home-content-container-piattaforma-two{
+        margin: 2rem auto 0rem auto;
+        flex-wrap: wrap-reverse;
+    }
+    .piattaforma-description h3{
+        font-size: 20px;
+    }
+    .piattaforma-description .button-style{
+        margin-top: 0rem;
+        margin-bottom: 2rem;  
+    }
+    .funzionalità{
+        margin-left: 0rem;
+    }
+    .funzionalità .button-style{
+        width: 12rem;
+    }
+    .piattaforma-img img{
+        height: 200px;
+    }
+    .piattaforma-description p{
+        max-width: 100%;
+    }
+
+
+    /* Vantaggi */
+    .Home-Content-container-scleta{
+        margin: 4rem auto 3rem auto;
+    }
+    .Home-Content-container-scleta h3{
+        font-size: 22px;
+        min-width: 20rem;
+    }
+    .Home-Content-container-scleta p{
+        display: none;
+    }
+    .Home-Content-container-vantaggi{
+        display: flex;
+        flex-direction: column;
+    }
+    .grid-container{
+        width: 18rem;
+    }
+    .grid-container h3{
+        font-size: 20px;
+        padding-bottom: 0;
+    } 
+    .grid-container .arrow-button{
+        padding-bottom: 10px;
+    }
+
+
+
+    /* Domande Faq */
+    .faq-container{
+        margin-top: 1rem;
+    }
+    .faq-container h3{
+        font-size: 22px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .accordion{
+        padding: 0px 15px 0px 15px;
+    }
+    #domanda{
+        width: 14rem;
+    }
+    .accordion-btn{
+        font-size: 14px;
+    }
+    .accordion-btn::after{
+        right: 0.6rem;
+    }
+    .accordion-body{
+        font-size: 14px;
+    }
+
+
+    /* Latest news */
+
+
+
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Smartphone medi (481px-768px) */
 @media only screen and (min-width: 481px) and (max-width: 768px) {
