--- a/style.css
+++ b/style.css
@@ -208,6 +208,10 @@ video{
     align-items: center;
     border-radius: 50px;
 }
+.img-container-circle img{
+    width: 30px;
+    height: 30px;
+}
 
 
 
@@ -469,7 +473,6 @@ video{
 
 
 
-/* Smartphone piccoli (320px-480px) */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
 
 
@@ -481,28 +484,35 @@ video{
         width: 100%;
     }
     .Home__subtitle-container{
-    
+        top: 45%;
         width: 100%;
-        height: 80%;
+        height: 45%;
     }
     .Home__subtitle-container img{
         width: 100%;
-        height: 40%;
-        padding: 60px 20px 60px 20px;
+        height: 50%;
+        padding: 0px 20px 20px 20px;
     }
     .Home__subtitle-container h3{
         font-weight: 400;
-        margin-top: -0.5rem;
+        margin-top: 0rem;
         font-size: 20px;
-        min-width: 90%;
-        height: 25%;
+        min-width: 95%;
+        height: 30%;
     }
     .button-container{
-        height: 4rem;
-        margin-top: -1.5rem;
+        margin-top: 1.5rem;
         width: 80%;
         min-width: 100%;
+        height: 20%;
     }
+
+    @media only screen and (min-width: 370px) and (max-width: 480px) {
+        .button-container{
+            margin-top: -1rem;
+        }
+    }
+
     .button-container .button-style{
         width: 12rem;
         font-size: 14px;
@@ -586,6 +596,12 @@ video{
     .grid-container .arrow-button{
         padding-bottom: 10px;
     }
+    .img-container-circle img{
+        width: 25px;
+        height: 25px;
+    }
+    
+
 
 
     /* Domande Faq */
@@ -733,14 +749,6 @@ video{
 
 
 
-
-
-
-
-/* Smartphone medi (481px-768px) */
-@media only screen and (min-width: 481px) and (max-width: 768px) {
-    
-}
 
 
 
