--- a/url/BioVitalAgeClock/BioVitalAgeClock.css
+++ b/url/BioVitalAgeClock/BioVitalAgeClock.css
@@ -563,6 +563,7 @@ iframe{
 
     .Home_Section-tittle{
         height: 150px;
+        background-position: 50% 20%;
     }
     .Home_Section-tittle h3{
         margin-top: 2rem;
