--- a/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.css
+++ b/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.css
@@ -236,7 +236,7 @@ span{
 @media only screen and (min-width: 320px) and (max-width: 480px) {
     .Home_Section-tittle{
         height: 150px;
-        background-position: 50% 20%;
+        background-size: cover;
     }
     .Home_Section-tittle h3{
         margin-top: 2rem;
