--- a/url/Industries/industries.css
+++ b/url/Industries/industries.css
@@ -204,83 +204,83 @@ span{
     z-index: 1;
     filter: blur(2px);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-.card-team{
-    box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.5);
-    margin: 10px;
-}
-.grid-container{
-    margin: auto auto 2rem auto;
-}
-.img-container {
-    overflow: hidden;
-    position: relative;
-}
-.img-container img {
-    width: 100%;
-    height: auto;
-    transition: transform 0.3s ease-in-out;
-}
-.img-container:hover img {
-    transform: scale(1.1);
-}
-.img-container .backdrop {
+.mobile{
     display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-.img-container:hover .backdrop {
-    display: flex; 
-}
-.description-card h3{
-    color: var(--tittle1);
-    font-size: 25px;
-    font-style: italic;
-}
-.description-card p{
-    color: var(--tittle2);
-    text-align: center;
-}
-.backdrop div{
-    gap: 10px;
-}
-.backdrop div a{
-    z-index: 1;
-}
-.row{
-    padding-bottom: 40px;
-    flex-wrap: nowrap;
-}
-.tittle{
-    font-weight: bold;
-    color: var(--tittle2);
-    padding-bottom: 20px;
-    padding-top: 40px;
-}
-.tittle:first-of-type{
-    padding-top: 0;
 }
 
- */
+
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+
+    .Home_Section-tittle{
+        height: 150px;
+        background-size: cover;
+    }
+    .Home_Section-tittle h3{
+        margin-top: 2rem;
+        font-size: 25px;
+    } 
+    video{
+        width: 150%;
+    }
+    .contenitore-video{
+        height: 270px;
+    }
+    .contenitore-description{
+        margin: auto;
+    }
+    .contenitore-description h3{
+        font-size: 20px;
+    }
+    .contenitore-description p{
+        min-width: 18rem;
+
+    }
+    .desktop{
+        display: none;
+    }
+    .mobile{
+        display: block;
+    }
+    .contenitore-presentazione{
+        flex-direction: column;
+    }
+    .contenitore-presentazione-description h3{
+        font-size: 20px
+    }
+    #percorsi{
+        width: 12rem;
+    }
+    #correzione{
+        margin-top: 0;
+        flex-direction: column-reverse;
+    }
+
+    .home-content-demo{
+        margin-top: 0rem;
+    }
+    .demo-descrizione{
+        margin-left: 0rem;
+    }
+    .demo-descrizione h3{
+        font-size: 22px;
+    }
+    .button-container-demo{
+        flex-direction: column;
+        margin-bottom: 1rem;
+    }
+    .home-content-demo .button-style{
+        padding: 0px;
+        width: 12rem;
+    }
+
+}
+
+
+
+
+
+
+
+
+
