--- a/url/Innovation/innovation.css
+++ b/url/Innovation/innovation.css
@@ -304,7 +304,7 @@ body{
 
     .Home_Section-tittle{
         height: 220px;
-        background-position: 20% 40%;
+        background-size: cover;
     }
     .Home_Section-tittle h3{
         font-size: 20px;
